test/compile-fail/scope/use-renamed-reentrant-tracing/top.rhdl
use a::b::d;

mod a {
    pub mod b {
        use c::d as e;
        mod c {
            pub struct d {}
        }
    }
}
